--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
   </head>
   <body>
 
+    <div id="container">
+      <h1>To-Do List</h1>
+      <input type="text">
+      <ul>
+        <li><span>X</span>Finish Projects</li>
+        <li><span>X</span>Clean up room</li>
+        <li><span>X</span>Eat you veggies</li>
+      </ul>
+    </div>
+
 
   </body>
 </html>
