--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="style/pretty.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:400,700" rel="stylesheet">
 
   </head>
   <body>
