--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
       crossorigin="anonymous">
     </script>
     <link rel="stylesheet" href="style/pretty.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab:400,700" rel="stylesheet">
 
   </head>
   <body>
 
     <div id="container">
-      <h1>To-Do List</h1>
-      <input type="text">
+      <h1>To-Do List <i class="fa fa-plus-square"></i></h1>
+      <input type="text" placeholder="Add New ToDo">
       <ul>
-        <li><span>X</span> Finish Projects</li>
-        <li><span>X</span> Clean up room</li>
-        <li><span>X</span> Eat you veggies</li>
+        <li><span><i class="fa fa-trash"></i></span> Finish Projects</li>
+        <li><span><i class="fa fa-trash"></i></span> Clean up room</li>
+        <li><span><i class="fa fa-trash"></i></span> Eat you veggies</li>
       </ul>
     </div>
 
